Append snapshot suffix to dev versions to meet OSSRH naming conventions.